load("@rules_ll//ll:defs.bzl", "ll_binary", "ll_compilation_database", "ll_library")

ll_library(
    name = "lib_1",
    srcs = [
        "lib_1/lib_1.cpp",
        "lib_1/lib_1_additional_source.cpp",
    ],
    hdrs = ["lib_1/lib_1_private.hpp"],
    defines = ["A_LOCAL_DEFINE"],
    exposed_defines = ["A_PUBLIC_DEFINE"],
    exposed_hdrs = [
        "lib_1/lib_1_public.hpp",
        "lib_1/public_include/included_header.hpp",
    ],
    visibility = ["@rules_ll_examples//:__pkg__"],
)

ll_library(
    name = "lib_2",
    srcs = [
        "lib_2/lib_2.cpp",
    ],
    hdrs = ["lib_2/lib_2_private.hpp"],
    exposed_hdrs = ["lib_2/lib_2_public.hpp"],
)

ll_binary(
    name = "executable",
    srcs = ["executable.cpp"],
    visibility = ["@rules_ll_examples//:__pkg__"],
    deps = [
        ":lib_1",
        ":lib_2",
    ],
)

ll_compilation_database(
    name = "lib_1_compile_commands",
    config = "//:clang_tidy_config",
    targets = [":lib_1"],
)

ll_compilation_database(
    name = "clang_tidy_example",
    config = "//:clang_tidy_config",
    targets = [":executable"],
)

ll_compilation_database(
    name = "compilation_database_with_excludes",
    config = "//:clang_tidy_config",
    exclude = ["lib_1"],
    targets = [":executable"],
)
