load("@rules_ll//ll:defs.bzl", "ll_binary", "ll_compilation_database")

ll_binary(
    name = "cuda_example",
    srcs = ["example.cpp"],
    compilation_mode = "cuda_nvidia",
    compile_flags = [
        "--std=c++20",
        "--offload-arch=sm_70",
        "-Wno-deprecated",
    ],
)

ll_compilation_database(
    name = "compile_commands",
    config = "//:clang_tidy_config",
    target = ":cuda_example",
)
