load("@rules_ll//ll:defs.bzl", "OFFLOAD_ALL_NVPTX", "ll_binary", "ll_test")

ll_binary(
    name = "cuda_example",
    srcs = ["example.cpp"],
    compilation_mode = "cuda_nvptx",
    compile_flags = OFFLOAD_ALL_NVPTX + [
        "--std=c++20",
    ],
)

ll_test(
    name = "test",
    srcs = ["example.cpp"],
    compilation_mode = "cuda_nvptx",
    compile_flags = OFFLOAD_ALL_NVPTX + [
        "--std=c++20",
    ],
    tags = ["nvptx"],
    visibility = ["@//:__pkg__"],
)
