load("@rules_ll//ll:defs.bzl", "ll_binary", "ll_compilation_database")

ll_binary(
    name = "format_example",
    srcs = ["format_example.cpp"],
    compile_flags = ["-std=c++20"],
    visibility = ["@//:__pkg__"],
)

ll_compilation_database(
    name = "compile_commands",
    config = "//:clang_tidy_config",
    targets = [":format_example"],
)
