load(
    "@rules_ll//ll:defs.bzl",
    "OFFLOAD_ALL_AMDGPU",
    "OFFLOAD_ALL_NVPTX",
    "ll_binary",
)

ll_binary(
    name = "nvptx",
    srcs = ["example.cpp"],
    compilation_mode = "hip_nvptx",
    compile_flags = OFFLOAD_ALL_NVPTX + [
        "--std=c++20",
    ],
    visibility = ["@//:__pkg__"],
)

ll_binary(
    name = "amdgpu",
    srcs = ["example.cpp"],
    compilation_mode = "hip_amdgpu",
    compile_flags = OFFLOAD_ALL_AMDGPU + [
        "--std=c++20",
    ],
    visibility = ["@//:__pkg__"],
)
