load(
    "@rules_ll//ll:defs.bzl",
    "OFFLOAD_ALL_AMDGPU",
    "OFFLOAD_ALL_NVPTX",
    "ll_binary",
    "ll_test",
)

[
    (
        ll_binary(
            name = name,
            srcs = ["example.cpp"],
            compilation_mode = "hip_{}".format(name),
            compile_flags = flags,
            visibility = ["@//:__pkg__"],
        ),
        ll_test(
            name = "{}_test".format(name),
            size = "small",
            srcs = ["example.cpp"],
            compilation_mode = "hip_{}".format(name),
            compile_flags = flags,
            tags = [name],
            visibility = ["@//:__pkg__"],
        ),
    )
    for (name, flags) in [
        (
            "nvptx",
            OFFLOAD_ALL_NVPTX + ["-std=c++20"],
        ),
        (
            "amdgpu",
            OFFLOAD_ALL_AMDGPU + ["-std=c++20"],
        ),
    ]
]
