load(
    "@rules_ll//ll:defs.bzl",
    # "OFFLOAD_ALL_AMDGPU",
    "OFFLOAD_ALL_NVPTX",
    "ll_binary",
    "ll_library",
)

ll_library(
    name = "hip",
    srcs = ["hip_dependent.cpp"],
    compilation_mode = "hip_nvptx",
    compile_flags = OFFLOAD_ALL_NVPTX + [
        "--std=c++20",
        "-Wno-deprecated",
    ],
    exposed_hdrs = ["hip_dependent.hpp"],
    visibility = ["@//:__pkg__"],
)

ll_library(
    name = "a",
    compile_flags = ["-std=c++20"],
    exposed_interfaces = {"a.cppm": "a"},
)

ll_library(
    name = "a_interface",
    srcs = ["a_module_interface.cpp"],
    compile_flags = ["--std=c++20"],
    exposed_hdrs = ["a_module_interface.hpp"],
    deps = [":a"],
)

ll_binary(
    name = "hip_modules_example",
    srcs = ["hip_module_example.cpp"],
    compilation_mode = "hip_nvptx",
    compile_flags = OFFLOAD_ALL_NVPTX + [
        "--std=c++20",
        "-Wno-deprecated",
    ],
    visibility = ["@//:__pkg__"],
    deps = [
        ":a_interface",
        ":hip",
    ],
)
