load("@rules_ll//ll:defs.bzl", "OFFLOAD_ALL_NVPTX", "ll_binary", "ll_library")

# Without the -fgpu-rdc flag this build would fail. The device code needs to be
# relocatable so that the kernel symbols can be resolved.
COMPILE_FLAGS = OFFLOAD_ALL_NVPTX + [
    "-std=c++20",
    "-fgpu-rdc",
]

ll_library(
    name = "add",
    srcs = [
        "add.hip.cpp",
    ],
    compilation_mode = "hip_nvptx",
    compile_flags = COMPILE_FLAGS,
    exposed_hdrs = [
        "add.hip.hpp",
    ],
)

ll_library(
    name = "multiply",
    srcs = [
        "multiply.hip.cpp",
    ],
    compilation_mode = "hip_nvptx",
    compile_flags = COMPILE_FLAGS,
    exposed_hdrs = [
        "multiply.hip.hpp",
    ],
)

ll_binary(
    name = "hip_rdc_example",
    srcs = [
        "main.hip.cpp",
    ],
    compilation_mode = "hip_nvptx",
    compile_flags = COMPILE_FLAGS,
    visibility = ["@//:__pkg__"],
    deps = [
        ":add",
        ":multiply",
    ],
)
