load(
    "@rules_ll//ll:defs.bzl",
    "ll_binary",
    "ll_compilation_database",
    "ll_library",
)

ll_library(
    name = "hello_world",
    srcs = ["hello_world_impl.cpp"],
    compile_flags = ["-std=c++20"],
    exposed_interfaces = {"hello_world.cppm": "hello_world"},
    interfaces = {
        "hello_world-hello.cppm": "hello_world:hello",
        "hello_world-world.cppm": "hello_world:world",
        "hello_world-another_world.cppm": "hello_world:another_world",
    },
)

ll_binary(
    name = "module_partition_example",
    srcs = ["main.cpp"],
    compile_flags = ["-std=c++20"],
    deps = [":hello_world"],
)

ll_compilation_database(
    name = "compile_commands",
    config = "//:clang_tidy_config",
    target = ":module_partition_example",
)
