load(
    "@rules_ll//ll:defs.bzl",
    "ll_binary",
    "ll_compilation_database",
    "ll_library",
)

# Module names may differ from target names and file names.
ll_library(
    name = "module_D",
    srcs = ["D_implementation.cpp"],
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"D_interface.cppm": "D"},
)

ll_library(
    name = "C",
    srcs = ["C.cpp"],
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"C.cppm": "C"},
)

ll_library(
    name = "B",
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"B.cppm": "B"},
)

ll_library(
    name = "A",
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"A.cppm": "A"},
    deps = [":B"],
)

ll_binary(
    name = "modules_example",
    srcs = ["main.cpp"],
    compile_flags = ["-std=c++20"],
    deps = [
        ":A",
        ":C",
        ":module_D",
    ],
)

ll_compilation_database(
    name = "compilation_database",
    config = "//:clang_tidy_config",
    target = ":modules_example",
)
