load(
    "@rules_ll//ll:defs.bzl",
    "ll_binary",
    "ll_compilation_database",
    "ll_library",
)

# Module names may differ from target names and file names.
ll_library(
    name = "module_d",
    srcs = ["d_implementation.cpp"],
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"d_interface.cppm": "d"},
)

ll_library(
    name = "c",
    srcs = ["c.cpp"],
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"c.cppm": "c"},
)

ll_library(
    name = "b",
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"b.cppm": "b"},
)

ll_library(
    name = "a",
    compile_flags = ["-std=c++20"],
    transitive_interfaces = {"a.cppm": "a"},
    deps = [":b"],
)

ll_binary(
    name = "modules_example",
    srcs = ["main.cpp"],
    compile_flags = ["-std=c++20"],
    deps = [
        ":a",
        ":c",
        ":module_d",
    ],
)

ll_compilation_database(
    name = "compile_commands",
    config = "//:clang_tidy_config",
    target = ":modules_example",
)
